Mon Sep 15 15:17:32 2003  George Lebl <jirka@5z.com>

	* geyes.c: when started in lockdown mode, hide the preferences item

2003-08-23  Irene Ryan <irene.ryan@sun.com>

	* docs/C/geyes.xml, geyes-C.omf, l10n.txt: Minor updates for
	  GNOME 2.4 release.
	* docs/C/geyes.sgml, geyes_applet.sgml: deleting obsolete files.

2003-08-21  Narayana Pattipati <narayana.pattipati@wipro.com>

	* docs/C/geyes-C.omf: Correct the Category name to fix the 
	'geyes' applet link missing problem in yelp. Bugzilla bug: 120293

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  HIGify widget padding between the vbox and 
	action area of the dialog.  Thanks to <chris@gnome-de.org>
	Christian - Manny Calavera - Neumair.

Thu Jul 03 15:58:56 2003  George Lebl <jirka@5z.com>

	* themes.c: key-writability for theme_path preference

2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>

	* geyes.[ch]: Center the geyes image on the panel.
 
2003-06-02  Kevin Vandersloot

	* geyes.c: expand for Fitt's law.

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  HIGify the action area of the preferences dialog.  

2003-05-12  Kevin Vandersloot <kfv101@psu.edu>

	* themes.c: work on systems not supporting PATH_MAX. Patch by
	Christian Marillat. Fixes part of bug #111466

2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  More HIGification of the preferences dialog: adds 
	a proper mnemonic label to the listview.

2003-04-21  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  HIGify the preference dialog.

2003-04-21  Kevin Vandersloot <kfv101@psu.edu>

	* themes.c: fix small memory leak from previous patch. Thanks to Pasupathi
	Duraisamy.

2003-04-19  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: themes.c: handle theme directories not configuree properly. Fixes bug
	#110852

2003-03-22  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: another optimization. Don't update the applet if the cursor hasn't moved.
