@@ -33,6 +33,7 @@ typedef struct
 typedef struct 
 {
 	/* Applet */
+	GtkWidget   *about_dialog;
 	PanelApplet *applet;
 	GtkWidget   *vbox;
 	GtkWidget   *hbox;
